<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/setting_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle">

        <xyz.miyayu.android.registersimulator.views.IconListItem
            android:id="@+id/store_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:bodyText="@string/open_items_setting"
            app:startIcon="@drawable/category" />

        <xyz.miyayu.android.registersimulator.views.IconListItem
            android:id="@+id/store_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:bodyText="@string/open_categories_setting"
            app:startIcon="@drawable/folder" />

        <xyz.miyayu.android.registersimulator.views.IconListItem
            android:id="@+id/tax_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:bodyText="@string/open_tax_setting"
            app:startIcon="@drawable/dollar" />

    </LinearLayout>
</layout>